Fixed code issues
Signed-off-by: Simon Martinelli <simon@martinelli.ch>